--- a/css/style.css
+++ b/css/style.css
@@ -87,12 +87,25 @@ ul.menuul li{
 }
 /* 追加↓ */
 .current{
-    border-bottom: 3px #ffa9b8 solid;
+  /*border-bottom: 3px #ffa9b8 solid;*/
+  /*border-bottom: 3px #d2b6c3 solid;*/
+  /*background: pink;*/
+  background-image: url(../img/header/lesson_on.png);
+  background-repeat: no-repeat;
+  /*background-size: 100%;*/
+  background-position: 50% 0;
+  background-size: 65%;
 }
+
+/* 追加↓ */
+a:hover{
+  opacity: 0.7;
+  /*background-image: url(../img/header/lesson_on.png);*/
+}
+
 .footer{
   width:100%;
   background-color: #bed5db;
-
 }
 .footerinner{
   margin-left: auto;
