・.currentのbackground-imageのパス（ファイル名部分）を変更 ・.current_1、.current_2、.current_3、.current_4を追加

--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,40 @@ ul.menuul li{
   /*border-bottom: 3px #ffa9b8 solid;*/
   /*border-bottom: 3px #d2b6c3 solid;*/
   /*background: pink;*/
-  background-image: url(../img/header/lesson_on.png);
+  background-image: url(../img/header/current.png);
   background-repeat: no-repeat;
   /*background-size: 100%;*/
   background-position: 50% 0;
   background-size: 65%;
 }
+
+.current_1{
+  background-image: url(../img/header/current.png);
+  background-repeat: no-repeat;
+  background-position: 26% 23%;
+  background-size: 70%;
+}
+
+.current_2{
+  background-image: url(../img/header/current.png);
+  background-repeat: no-repeat;
+  background-position: 29% 23%;
+  background-size: 70%;
+  }
+
+.current_3{
+  background-image: url(../img/header/current.png);
+  background-repeat: no-repeat;
+  background-position: 14% 23%;
+  background-size: 70%;
+  }
+
+  .current_4{
+    background-image: url(../img/header/current.png);
+    background-repeat: no-repeat;
+    background-position: 24% 23%;
+    background-size: 70%;
+    }
 
 /* 追加↓ */
 a:hover{
